--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>comatguigu.github</groupId>
     <artifactId>SH0720</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.4.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
